Moving GS Preview files to root

--- a/webapp.ini
+++ b/webapp.ini
@@ -1,7 +1,7 @@
 [Parameters]
 id=grooveshark@prism.app
 name=Grooveshark
-uri=http://www.grooveshark.com
+uri=http://preview.grooveshark.com
 icon=webapp
 status=false
 location=false
